[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "aiohttp>=3.12.13",
    "bitsandbytes>=0.46.1",
    "fastapi>=0.115.9",
    "flashinfer-cubin>=0.4.1",
    "flashinfer-python==0.3.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.6",
    "nvidia-ml-py>=13.580.65",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.4",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.54.1",
    "uvicorn>=0.34.3",
    "uvicorn-worker>=0.3.0",
    "vllm==0.11.0",
]

# Tell uv which index to use for PyTorch per platform:
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# Register the CUDA 12.8 wheel index (only used for the packages above)
[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true
